Fix ViewPanel z-index

--- a/resources/assets/sass/components/list/_ViewPanel.scss
+++ b/resources/assets/sass/components/list/_ViewPanel.scss
@@ -6,6 +6,7 @@
   background: white;
   width: 90%;
   @include layer(pop-out);
+  z-index: 99;
 
   &--collapsed {
     width:0;
